--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@emotion/styled": "^11.6.0",
     "@svgr/webpack": "^6.2.0",
     "axios": "^0.25.0",
+    "chart.js": "^3.7.0",
+    "chartjs-react": "^3.4.0",
     "firebase": "^9.6.3",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "next": "12.0.8",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "react-toastify": "^8.1.0",
